tests/TypingSpec/invalid/prog/fun-align-2.algst
foo : Int
foo [t] = 42
